<resources>
    <string name="app_name">Volunteer Community</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="register">REGISTER</string>
    <string name="signup">SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOG IN</string>
    <string name="action_logout">Logout</string>
    <string name="place">Charity Location</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="activity">Activity</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Place</string>
    <string name="update">UPDATE</string>
    <string name="create">CREATE</string>

    <string name="err_msg_fullname">Enter your Full name</string>
    <string name="err_msg_email">Enter your valid email address</string>
    <string name="err_msg_pass_empty">Enter your password</string>
    <string name="err_msg_pass_short">Your password must be at least 6 characters</string>
    <string name="err_msg_cpass">Confirm password does not match the password.</string>
    <string name="err_msg_phone">Enter your valid phone number</string>
    <string name="err_msg_title">Title cannot be blank</string>
    <string name="err_msg_address">Address cannot be blank</string>
    <string name="err_msg_activity">Activity cannot be blank</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_my_place">My Place</string>
    <string name="nav_item_places">Place</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_my_place</item>
        <item>@string/nav_item_places</item>>
    </string-array>

    <string name="title_places">Place</string>
    <string name="title_my_place">My Place</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>